# libmapper-arduino

./: .gitmodules  CMakeLists.txt  Makefile  README.md  arduino-esp32.cmake  genlib.sh  libmapper_config.h  libmpr_config.h  library.properties  mapper.h  update-library.sh
compat/: library.properties
compat/include/: compat.h  ifaddrs.h  poll.h
compat/src/: compat.h  gai_strerror.c  gethostname.c  getnameinfo.c  ifaddrs.c  ifaddrs.h
compat/src/compat/: compat.h
examples/AnalogReadExample/: AnalogReadExample.ino
examples/Example_AnalogRead/: Example_AnalogRead.ino
examples/Example_CppApi/: Example_CppApi.ino
examples/Example_ESP32/: Example_ESP32.ino
examples/Example_M5StickC/: Example_M5StickC.ino
gen-lib/: Makefile  arduino-esp32.cmake  liblo_config.h  libmapper_config.h  library.properties
src/: compat.h  ifaddrs.h  mapper_cpp.h  poll.h
src/compat/: gai_strerror.c  gethostname.c  getnameinfo.c  ifaddrs.c
src/lo/: address.c  blob.c  bundle.c  message.c  method.c  pattern_match.c  send.c  server.c  server_thread.c  subtest.c  timetag.c  version.c
src/mapper/: config.h  device.c  expression.c  graph.c  link.c  list.c  map.c  network.c  object.c  properties.c  router.c  signal.c  slot.c  table.c  time.c  value.c
